--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
-    "next": "15.1.0",
+    "next": "^16.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "recharts": "^3.7.0",
@@ -32,7 +32,7 @@
     "@types/react-dom": "^19",
     "@types/three": "^0.171.0",
     "eslint": "^9",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8",
     "typescript": "^5"
   }
